Some more styling.

--- a/src/css/masha.css
+++ b/src/css/masha.css
@@ -86,7 +86,7 @@
             }
 
 .user_selection, .user_selection_true {
-    background: #c4f47d;
+    background: #e6e6e6;
     padding: 2px 0;
     }
 .user_selection a.txtsel_close, .user_selection_true a.txtsel_close {
@@ -99,8 +99,9 @@
     display: inline-block;
     width: 1em;
     height: 1em;
-    border: 2px solid #ccc;
-    background: #ccc;
+    border: 2px solid #02c;
+    background: #02c;
+    margin-left: 0.2em;
     vertical-align: text-bottom;
     }
 .user_selection a.txtsel_close:hover, .user_selection_true a.txtsel_close:hover {
