--- a/lib/assets/stylesheets/masha.css
+++ b/lib/assets/stylesheets/masha.css
@@ -2,7 +2,7 @@
   background: #e6e6e6;
 }
 
-.user_selection .anchor, .user_selection_true .anchor {
+.anchor {
   display: inline-block;
   width: 1em;
   height: 1em;
