Revert "Moving towards wrapping the selection only when highlighting it."
This reverts commit d7dda443558e9fd91bcec59a0223e48a5e7439e5.

--- a/lib/assets/stylesheets/masha.css
+++ b/lib/assets/stylesheets/masha.css
@@ -2,7 +2,7 @@
   background: #e6e6e6;
 }
 
-.anchor {
+.user_selection .anchor, .user_selection_true .anchor {
   display: inline-block;
   width: 1em;
   height: 1em;
